# grpc_demo

./: .gitignore  Dockerfile.grpc  Dockerfile.rest  Makefile  PRESENT.md  README.md  docker-compose.yml  movie_catalogue.proto
docker/: rest.Dockerfile
go/grpc_demo/: go.mod  go.sum  list_movies.go  movie_catalogue.pb.go
go/grpc_demo/cmd/grpc/movie_server/: main.go
go/grpc_demo/cmd/movie_server/: main.go
go/grpc_demo/cmd/sample_data/sql/: movies_dml.sql
go/grpc_demo/pkg/http/grpc/: handler.go  movie_catalogue.pb.go  movie_catalogue_grpc.pb.go
go/grpc_demo/pkg/http/rest/: handler.go
go/grpc_demo/pkg/listing/: cast_member.go  movie.go  service.go
go/grpc_demo/pkg/storage/sql/: cast_member.go  movie.go  movies_ddl.sql  repository.go
python/grpc_demo/: add_movie.py  list_movies.py  movie_catalogue_pb2.py  pyproject.toml
