[tool.poetry]
name = "grpc_demo"
version = "0.1.0"
description = "Demo protobuf and gRPC concepts using a simple movie catalogue"
authors = ["Jochen Van de Voorde <jochen.vandevoorde@gmail.com>"]
license = "Unilicense"

[tool.poetry.dependencies]
python = "^3.8"
protobuf = "^3.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
